<resources>
    <string name="app_name">Themes</string>
    <string name="theme_accent_category_title">System accent color</string>
    <string name="theme_navbar_category_title">Navigationbar</string>
    <string name="theme_font_category_title">Font customizations</string>
    <string name="theme_shape_ui_category_title">Shapes and UI customizations</string>
    <string name="theme_system_category_title">System theme</string>
    <string name="theme_other_category_title">Other</string>
    <string name="schedule_footer_info">When setting a schedule, always set the first schedule time closest to your current time.\n\nFor example:\nIf the current time is 4:00pm and you want to set a schedule from 6:00am to 6:00pm, you would set the first theme to 6:00pm, then the second theme to 6:00am.</string>
    <string name="accent_picker_dialog_title">Select an accent</string>
    <string name="theme_accent_picker_title">Accent color</string>
    <string name="theme_accent_picker_summary">Select system theme accent color</string>
    <string name="theme_accent_picker_default">Default</string>
    <string name="accent_picker_stock_colors">Stock</string>
    <string name="accent_picker_custom_colors">Custom</string>
    <string name="accent_picker_brand_colors">Brand</string>
    <string name="rgb_accent_picker_title">RGB accent picker</string>
    <string name="rgb_accent_picker_summary">Choose the accent color yourself</string>
    <string name="theme_navbar_picker_title">Navbar style</string>
    <string name="theme_navbar_picker_summary">Select navbar style</string>
    <string name="theme_navbar_picker_oneplus">OnePlus</string>
    <string name="theme_navbar_picker_oneui">One UI</string>
    <string name="theme_navbar_picker_tecno">Tecno Camon</string>
    <string name="theme_navbar_picker_asus">ASUS</string>
    <string name="theme_navbar_picker_pd">PixelDust</string>
    <string name="theme_navbar_picker_android">Android</string>
    <string name="theme_navbar_picker_moto">Moto</string>
    <string name="theme_navbar_picker_nexus">Nexus</string>
    <string name="theme_navbar_picker_old">Old</string>
    <string name="theme_navbar_picker_sammy">Samsung</string>
    <string name="theme_navbar_color_picker_title">Gesture navbar color</string>
    <string name="theme_navbar_color_picker_summary">Chose the color of the navbar handle</string>
    <string name="navbar_color_picker_dialog_title">Select a navbar color</string>
    <string name="dark_theme_title">Dark theme</string>
    <string name="font_type_title">Font type</string>
    <string name="font_type_summary">Select font type</string>
    <string name="font_type_default">Default</string>
    <string name="font_type_2" translatable="false">Aclonica</string>
    <string name="font_type_3" translatable="false">Amarante</string>
    <string name="font_type_4" translatable="false">Arbutus</string>
    <string name="font_type_5" translatable="false">Bariol</string>
    <string name="font_type_6" translatable="false">Cagliostro</string>
    <string name="font_type_7" translatable="false">Comic Sans</string>
    <string name="font_type_8" translatable="false">Cool Story</string>
    <string name="font_type_9" translatable="false">Fira Sans</string>
    <string name="font_type_10" translatable="false">Google Sans</string>
    <string name="font_type_11" translatable="false">Google Sans Medium</string>
    <string name="font_type_12" translatable="false">LG Smart Gothic</string>
    <string name="font_type_13" translatable="false">Linotte</string>
    <string name="font_type_14" translatable="false">OnePlus Slate</string>
    <string name="font_type_15" translatable="false">Rosemary</string>
    <string name="font_type_16" translatable="false">Samsung One</string>
    <string name="font_type_17" translatable="false">San Francisco</string>
    <string name="font_type_18" translatable="false">Sony Sketch</string>
    <string name="font_type_19" translatable="false">Summer Dream</string>
    <string name="font_type_20" translatable="false">Surfer</string>
    <string name="adaptive_icon_shape_default">Default</string>
    <string name="adaptive_icon_shape_pebble">Pebble</string>
    <string name="adaptive_icon_shape_vessel">Vessel</string>
    <string name="adaptive_icon_shape_taperedrect">Tapered Rectangle</string>
    <string name="adaptive_icon_shape_teardrop">Teardrop</string>
    <string name="adaptive_icon_shape_squircle">Squircle</string>
    <string name="adaptive_icon_shape_roundedrect">Rounded Rectangle</string>
    <string name="adaptive_icon_shape_square">Square</string>
    <string name="adaptive_icon_shape_hexagon">Hexagon</string>
    <string name="adaptive_icon_shape_cylinder">Cylinder</string>
    <string name="adaptive_icon_shape_heart">Heart</string>
    <string name="adaptive_icon_shape_title">Icon shape</string>
    <string name="adaptive_icon_shape_dialog_title">Select icon shape</string>
    <string name="statusbar_icons_default">Default</string>
    <string name="statusbar_icons_filled">Filled</string>
    <string name="statusbar_icons_rounded">Rounded</string>
    <string name="statusbar_icons_circular">Circular</string>
    <string name="statusbar_icons_kai" translatable="false">Kai</string>
    <string name="statusbar_icons_sam" translatable="false">Sam</string>
    <string name="statusbar_icons_victor" translatable="false">Victor</string>
    <string name="statusbar_icons_title">Statusbar/QS icons</string>
    <string name="statusbar_icons_dialog_title">Select statusbar icon set</string>
    <string name="accent_colors_space">Space</string>
    <string name="accent_colors_purple">Purple</string>
    <string name="accent_colors_orchid">Orchid</string>
    <string name="accent_colors_ocean">Ocean</string>
    <string name="accent_colors_green">Green</string>
    <string name="accent_colors_cinnamon">Cinnamon</string>
    <string name="accent_colors_amethyst">Amethyst</string>
    <string name="accent_colors_aquamarine">Aquamarine</string>
    <string name="accent_colors_carbon">Carbon</string>
    <string name="accent_colors_palette">Palette</string>
    <string name="accent_colors_sand">Sand</string>
    <string name="accent_colors_tangerine">Tangerine</string>
    <string name="accent_colors_amber">Amber</string>
    <string name="accent_colors_azureradiance">AzureRadiance</string>
    <string name="accent_colors_blue">Blue</string>
    <string name="accent_colors_bluegrey">Blue Grey</string>
    <string name="accent_colors_brown">Brown</string>
    <string name="accent_colors_cyan">Cyan</string>
    <string name="accent_colors_deeporange">Deep Orange</string>
    <string name="accent_colors_deeppurple">Deep Purple</string>
    <string name="accent_colors_grey">Grey</string>
    <string name="accent_colors_indigo">Indigo</string>
    <string name="accent_colors_lightblue">Light Blue</string>
    <string name="accent_colors_lightgreen">Light Green</string>
    <string name="accent_colors_lime">Lime</string>
    <string name="accent_colors_orange">Orange</string>
    <string name="accent_colors_pink">Pink</string>
    <string name="accent_colors_red">Red</string>
    <string name="accent_colors_teal">Teal</string>
    <string name="accent_colors_yellow">Yellow</string>
    <string name="accent_colors_androidonegreen">AndroidOneGreen</string>
    <string name="accent_colors_cocacolared">CocaColaRed</string>
    <string name="accent_colors_discordpurple">DiscordPurple</string>
    <string name="accent_colors_facebookblue">FacebookBlue</string>
    <string name="accent_colors_instagramcerise">InstagramCerise</string>
    <string name="accent_colors_jollibeecrimson">JollibeeCrimson</string>
    <string name="accent_colors_monsterenergygreen">MonsterEnergyGreen</string>
    <string name="accent_colors_nextbitmint">NextbitMint</string>
    <string name="accent_colors_oneplusred">OneplusRed</string>
    <string name="accent_colors_pepsiblue">PepsiBlue</string>
    <string name="accent_colors_pocophoneyellow">PocophoneYellow</string>
    <string name="accent_colors_razergreen">RazerGreen</string>
    <string name="accent_colors_samsungblue">SamsungBlue</string>
    <string name="accent_colors_spotifygreen">SpotifyGreen</string>
    <string name="accent_colors_starbucksgreen">StarbucksGreen</string>
    <string name="accent_colors_twitchpurple">TwitchPurple</string>
    <string name="accent_colors_twitterblue">TwitterBlue</string>
    <string name="accent_colors_xboxgreen">XboxGreen</string>
    <string name="accent_colors_xiaomiorange">XiaomiOrange</string>
    <string name="theme_type_title">System theme</string>
    <string name="theme_type_summary">Select theme</string>
    <string name="theme_type_light">Light</string>
    <string name="theme_type_google_dark">Google dark</string>
    <string name="theme_type_pitch_black">Pitch black</string>
    <string name="theme_type_solarized_dark">Solarized dark</string>
    <string name="theme_type_choco_x">Black coffee</string>
    <string name="theme_type_dark_grey">Dark grey</string>
    <string name="theme_type_dark_aubergine">Dark aubergine</string>
    <string name="theme_type_clear_spring">Clear spring</string>
    <string name="theme_backup_title">Backup theme</string>
    <string name="theme_backup_summary">Backup your current theme configuration</string>
    <string name="theme_backup_reach_limit_summary">Backup limit reached</string>
    <string name="theme_restore_title">Restore theme</string>
    <string name="theme_restore_summary">Restore a saved theme configuration</string>
    <string name="theme_restore_no_backup_summary">No backup available</string>
    <string name="theme_restore_popup_title">Swipe horizontally to view more backups</string>
    <string name="theme_name_exist_warning">This backup name already exist. Enter a new one.</string>
    <string name="theme_rename_dialog_title">Rename theme</string>
    <string name="theme_button_apply_theme">Apply theme</string>
    <string name="theme_button_delete_theme">Delete theme</string>
    <string name="theme_switch_persistent_title">Persistent switches state</string>
    <string name="theme_switch_restore_theme_color">Background color</string>
    <string name="theme_switch_restore_accent_color">Accent color</string>
    <string name="theme_switch_restore_font_type">Font type</string>
    <string name="theme_switch_restore_adaptative_icons">Adaptative icons</string>
    <string name="theme_switch_restore_sb_icons">Status bar icons</string>
    <string name="theme_switch_restore_qstiles">QS tiles style</string>
    <string name="theme_switch_restore_sbheight">Statusbar height</string>
    <string name="theme_switch_restore_uiradius">UI corner shape</string>
    <string name="theme_switch_restore_navbar">Navigation bar</string>
    <string name="theme_switch_restore_wallpaper">Wallpaper</string>
    <string name="theme_switch_restore_switchstyle">Switch style</string>
    <string name="theme_switch_restore_sliderstyle">Brightness slider style</string>
    <string name="theme_schedule_title">Schedule</string>
    <string name="clock_style_title">Clock style</string>
    <string name="clock_style_summary">Customize lockscreen clock</string>
    <string name="theme_qsstyle_picker_title">QS tile style</string>
    <string name="theme_qsstyle_picker_summary">Select QS tile style</string>
    <string name="ui_radius_title">UI corner shape</string>
    <string name="ui_radius_dialog_title">Select corner model</string>
    <string name="statusbar_height_title">Statusbar height</string>
    <string name="statusbar_height_dialog_title">Select statusbar height model</string>
    <string name="switch_style_title">Switch style</string>
    <string name="switch_style_dialog_title">Customize switch style</string>
    <string name="brightness_slider_style_title">Brightness slider style</string>
    <string name="brightness_slider_style_dialog_title">Change the brightness slider style</string>
</resources>