<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2019-2020 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.pixeldust.themes.CustomPreference
        android:key="wp_preview"
        android:enabled="false" />

    <PreferenceCategory
        android:key="theme_accent_category"
        android:title="@string/theme_accent_category_title" >

        <Preference
            android:key="theme_accent_picker"
            android:title="@string/theme_accent_picker_title"
            android:summary="@string/theme_accent_picker_summary" />

        <com.pixeldust.support.colorpicker.ColorPickerPreference
            android:key="rgb_accent_picker"
            android:title="@string/rgb_accent_picker_title"
            android:summary="@string/rgb_accent_picker_summary"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="theme_threebuttonsnavbar_category"
        android:title="@string/theme_navbar_category_title" >

        <Preference
            android:key="theme_navbar_picker"
            android:title="@string/theme_navbar_picker_title"
            android:summary="@string/theme_navbar_picker_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="theme_gesturenavbar_category"
        android:title="@string/theme_navbar_category_title" >

        <Preference
            android:key="theme_navbar_color"
            android:title="@string/theme_navbar_color_picker_title"
            android:summary="@string/theme_navbar_color_picker_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="theme_font_category"
        android:title="@string/theme_font_category_title" >

        <ListPreference
            android:key="font_picker"
            android:title="@string/font_type_title"
            android:summary="@string/font_type_summary"
            android:dialogTitle="@string/font_type_summary"
            android:entries="@array/font_type_titles"
            android:entryValues="@array/font_type_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="theme_shape_ui_category"
        android:title="@string/theme_shape_ui_category_title" >

        <ListPreference
            android:key="adapative_icon_shape"
            android:title="@string/adaptive_icon_shape_title"
            android:dialogTitle="@string/adaptive_icon_shape_dialog_title"
            android:entries="@array/adapative_icon_shape_titles"
            android:entryValues="@array/adapative_icon_shape_values" />

        <ListPreference
            android:key="statusbar_icons"
            android:title="@string/statusbar_icons_title"
            android:dialogTitle="@string/statusbar_icons_dialog_title"
            android:entries="@array/statusbar_icons_titles"
            android:entryValues="@array/statusbar_icons_values" />

        <Preference
            android:key="theme_qsstyle_picker"
            android:title="@string/theme_qsstyle_picker_title"
            android:summary="@string/theme_qsstyle_picker_summary" />

        <ListPreference
            android:key="statusbar_height"
            android:title="@string/statusbar_height_title"
            android:dialogTitle="@string/statusbar_height_dialog_title"
            android:entries="@array/statusbar_height_titles"
            android:entryValues="@array/statusbar_height_values" />

        <ListPreference
            android:key="ui_radius"
            android:title="@string/ui_radius_title"
            android:dialogTitle="@string/ui_radius_dialog_title"
            android:entries="@array/ui_radius_titles"
            android:entryValues="@array/ui_radius_values" />

        <ListPreference
            android:key="switch_style"
            android:title="@string/switch_style_title"
            android:dialogTitle="@string/switch_style_dialog_title"
            android:entries="@array/switch_style_titles"
            android:entryValues="@array/switch_style_values" />

        <ListPreference
            android:key="brightness_slider_style"
            android:title="@string/brightness_slider_style_title"
            android:dialogTitle="@string/brightness_slider_style_dialog_title"
            android:entries="@array/brightness_slider_style_titles"
            android:entryValues="@array/brightness_slider_style_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="theme_system_category"
        android:title="@string/theme_system_category_title" >

        <ListPreference
            android:key="theme_switch"
            android:title="@string/theme_type_title"
            android:summary="@string/theme_type_summary"
            android:dialogTitle="@string/theme_type_summary"
            android:entries="@array/theme_type_titles"
            android:entryValues="@array/theme_type_values"/>

        <Preference
            android:key="theme_schedule"
            android:title="@string/theme_schedule_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="theme_other_category"
        android:title="@string/theme_other_category_title">

        <Preference
            android:key="clock_style"
            android:title="@string/clock_style_title"
            android:summary="@string/clock_style_summary">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.android.wallpaper"
                android:targetClass="com.android.customization.picker.LockClockPickerActivity" />
        </Preference>

        <Preference
            android:key="backup_themes"
            android:title="@string/theme_backup_title" />

        <Preference
            android:key="restore_themes"
            android:title="@string/theme_restore_title" />

    </PreferenceCategory>

</PreferenceScreen>
